Updated HTML with dynamic AI tools

--- a/index/index.html
+++ b/index/index.html
@@ -28,26 +28,11 @@
         <button class="cta-btn">Get Started</button>
     </header>
 
-    <!-- 🛠️ AI Removal & Cutout Tools -->
+    <!-- 🛠️ AI Removal & Cutout Tools (Dynamic) -->
     <section class="ai-tools" id="tools">
         <h2>AI Removal & Cutout Tools</h2>
         <div class="tools-container">
-            <div class="tool-card">
-                <h3>Remove Unwanted Objects</h3>
-                <p>Magically remove unwanted persons, objects, scratches, skin blemishes, and other imperfections.</p>
-            </div>
-            <div class="tool-card">
-                <h3>Remove Background from Video</h3>
-                <p>No green screen, no pick pixels, select colors, paint masks or move paths, 100% automatically remove video background.</p>
-            </div>
-            <div class="tool-card">
-                <h3>Remove Background from Photo</h3>
-                <p>Superb cutout quality with stunning edge details, background removal is a breeze.</p>
-            </div>
-            <div class="tool-card">
-                <h3>Face Cutout</h3>
-                <p>Face and hair segmentation for human (kids and adults) and pets (cats, dogs, etc.) with hair-level fine details.</p>
-            </div>
+            <!-- AI tools will be added here dynamically from product.json -->
         </div>
     </section>
 
@@ -142,8 +127,9 @@
         <p>HongKong Office: 6/F MANULIFE PLACE, 348 KWUN TONG ROAD, KOWLOON, HK</p>
         <p>Follow us - by Team LibAI</p>
         <p>&copy; 2018-2025 cutout.pro</p>
+
+        <script src="js/script.js"></script> <!-- Ensure script.js is linked for dynamic product loading -->
     </footer>
 
-    <script src="js/script.js"></script>
 </body>
 </html>
